# libtickit

./: CMakeLists.txt
include/: tickit.h
src/: termdriver-ti.c  utf8.c
